--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -102,8 +102,7 @@ jobs:
       - name: Maintain Connection
         run: |
           $password = "${{ steps.rdp_creds_step.outputs.rdp_password }}"
-          # `::add-mask::` line abhi comment kiya gaya hai, taaki aap password dekh saken
-          # echo "::add-mask::$password"
+          echo "::add-mask::$password"
           
           Write-Host "`n=== RDP ACCESS ==="
           Write-Host "Address: $env:TAILSCALE_IP"
