--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,8 @@ jobs:
           Add-LocalGroupMember -Group "Administrators" -Member "RDP"
           Add-LocalGroupMember -Group "Remote Desktop Users" -Member "RDP"
           
-          echo "rdp_password=$password" >> "$GITHUB_OUTPUT"
+          # This line is changed to securely pass the password
+          echo "RDP_PASSWORD=$password" >> $env:GITHUB_ENV
           
           if (-not (Get-LocalUser -Name "RDP")) {
               Write-Error "User creation failed"
@@ -60,7 +61,6 @@ jobs:
 
       - name: Install Tailscale
         run: |
-          # This line is now correct, with the ending double quote.
           $tsUrl = "https://pkgs.tailscale.com/stable/tailscale-setup-1.82.0-amd64.msi"
           $installerPath = "$env:TEMP\tailscale.msi"
           
@@ -102,13 +102,12 @@ jobs:
 
       - name: Maintain Connection
         run: |
-          $password = "${{ steps.rdp_creds_step.outputs.rdp_password }}"
-          echo "::add-mask::$password"
+          echo "::add-mask::$env:RDP_PASSWORD"
           
           Write-Host "`n=== RDP ACCESS ==="
           Write-Host "Address: $env:TAILSCALE_IP"
           Write-Host "Username: RDP"
-          Write-Host "Password: $password"
+          Write-Host "Password: $env:RDP_PASSWORD"
           Write-Host "==================`n"
           
           while ($true) {
