--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,12 +30,11 @@ jobs:
           Restart-Service -Name TermService -Force
 
       - name: Create RDP User with Secure Password
-        id: rdp_creds_step
         run: |
           Add-Type -AssemblyName System.Security
           $charSet = @{
               Upper   = [char[]](65..90)      # A-Z
-              Lower   = [char[]](97..122)      # a-z
+              Lower   = [char[]](97..122)     # a-z
               Number  = [char[]](48..57)      # 0-9
               Special = ([char[]](33..47) + [char[]](58..64) +
                          [char[]](91..96) + [char[]](123..126)) # Special characters
@@ -51,8 +50,8 @@ jobs:
           Add-LocalGroupMember -Group "Administrators" -Member "RDP"
           Add-LocalGroupMember -Group "Remote Desktop Users" -Member "RDP"
           
-          # This line is changed to securely pass the password
-          echo "RDP_PASSWORD=$password" >> $env:GITHUB_ENV
+          echo "RDP_CREDS=User: RDP | Password: $password" >> $env:GITHUB_ENV
+          echo "::add-mask::$password"
           
           if (-not (Get-LocalUser -Name "RDP")) {
               Write-Error "User creation failed"
@@ -87,7 +86,7 @@ jobs:
               exit 1
           }
           echo "TAILSCALE_IP=$tsIP" >> $env:GITHUB_ENV
-
+      
       - name: Verify RDP Accessibility
         run: |
           Write-Host "Tailscale IP: $env:TAILSCALE_IP"
@@ -102,20 +101,16 @@ jobs:
 
       - name: Maintain Connection
         run: |
-          echo "::add-mask::$env:RDP_PASSWORD"
-          
           Write-Host "`n=== RDP ACCESS ==="
           Write-Host "Address: $env:TAILSCALE_IP"
           Write-Host "Username: RDP"
-          Write-Host "Password: $env:RDP_PASSWORD"
+          # Extract password from RDP_CREDS (assuming format "User: RDP | Password: <password>")
+          $password = $env:RDP_CREDS -replace '.*Password: (.*)', '$1'
+          Write-Host "Password: $password"
           Write-Host "==================`n"
           
-          # Calculate approximate seconds for 1 year (365 days)
-          $oneYearInSeconds = 365 * 24 * 60 * 60
-          $startTime = Get-Date
-          $endTime = $startTime.AddSeconds($oneYearInSeconds)
-          
-          while ((Get-Date) -lt $endTime) {
+          # Keep runner active indefinitely (or until manually cancelled)
+          while ($true) {
               Write-Host "[$(Get-Date)] RDP Active - Use Ctrl+C in workflow to terminate"
               Start-Sleep -Seconds 300
           }
