--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,30 +29,16 @@ jobs:
           # (Optional) Restart the Remote Desktop service to ensure changes take effect
           Restart-Service -Name TermService -Force
 
-      - name: Create RDP User with Secure Password
-        id: rdp_creds_step
+      - name: Create RDP User
+        id: rdp_user_step
         run: |
-          Add-Type -AssemblyName System.Security
-          $charSet = @{
-              Upper   = [char[]](65..90)      # A-Z
-              Lower   = [char[]](97..122)      # a-z
-              Number  = [char[]](48..57)      # 0-9
-              Special = ([char[]](33..47) + [char[]](58..64) +
-                         [char[]](91..96) + [char[]](123..126)) # Special characters
-          }
-          $rawPassword = @()
-          $rawPassword += $charSet.Upper | Get-Random -Count 4
-          $rawPassword += $charSet.Lower | Get-Random -Count 4
-          $rawPassword += $charSet.Number | Get-Random -Count 4
-          $rawPassword += $charSet.Special | Get-Random -Count 4
-          $password = -join ($rawPassword | Sort-Object { Get-Random })
+          # Use the password from GitHub Secrets
+          $password = "${{ secrets.RDP_PASSWORD }}"
           $securePass = ConvertTo-SecureString $password -AsPlainText -Force
           New-LocalUser -Name "RDP" -Password $securePass -AccountNeverExpires
           Add-LocalGroupMember -Group "Administrators" -Member "RDP"
           Add-LocalGroupMember -Group "Remote Desktop Users" -Member "RDP"
-          
-          echo "rdp_password=$password" >> "$GITHUB_OUTPUT"
-          
+
           if (-not (Get-LocalUser -Name "RDP")) {
               Write-Error "User creation failed"
               exit 1
@@ -101,13 +87,13 @@ jobs:
 
       - name: Maintain Connection
         run: |
-          $password = "${{ steps.rdp_creds_step.outputs.rdp_password }}"
-          echo "::add-mask::$password"
+          # The password is now coming from a secret, so it's not generated here.
+          echo "::add-mask::${{ secrets.RDP_PASSWORD }}"
           
           Write-Host "`n=== RDP ACCESS ==="
           Write-Host "Address: $env:TAILSCALE_IP"
           Write-Host "Username: RDP"
-          Write-Host "Password: $password"
+          Write-Host "Password: ${{ secrets.RDP_PASSWORD }}"
           Write-Host "==================`n"
           
           while ($true) {
