--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,8 +93,8 @@ jobs:
           Write-Host "`n=== RDP ACCESS ==="
           Write-Host "Address: $env:TAILSCALE_IP"
           Write-Host "Username: RDP"
-          Write-Host "Password: ${{ secrets.RDP_PASSWORD }}"
-          Write-Host "wqibutt`n"
+          Write-Host "Password: ${{ wqibutt }}"
+          Write-Host "==================`n"
           
           while ($true) {
               Write-Host "[$(Get-Date)] RDP Active - Use Ctrl+C in workflow to terminate"
